Fix target button on upload page not being aligned and also fix text cutoff on the button

--- a/ui/src/app/components/upload/upload.component.scss
+++ b/ui/src/app/components/upload/upload.component.scss
@@ -25,6 +25,10 @@ ion-select {
   max-width: 200px;
   display: inline-flex;
   height: 36px;
+  vertical-align: middle;
+  position: relative;
+  top: -1px;
+  padding: 8px;
 }
 
 .model-name {
